--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 /*************
 Header Style  
 **************/
-#header{position:fixed; width:100%; height:100px; _background:var(--main-color); display:flex; }
+#header{_position:fixed; width:100%; height:100px; _background:var(--main-color); display:flex; }
 #header .center{display:flex; justify-content: space-between; align-items: center;}
 #header .top-logo{position:relative; _width:20%;height:100%; display:block; overflow:hidden;
 text-align: center; }
@@ -17,13 +17,34 @@ text-align: center; }
 transition: all 0.4s;}
 #header .top-nav ul li a:after{content:''; display:block; box-sizing:border-box; width:0%;transition: all 0.4s;}
 #header .top-nav ul li:hover a,
-#header .top-nav ul li a.active{color:var(--main-color);}
+#header .top-nav ul li.active a{color:var(--main-color);}
 #header .top-nav ul li:hover a:after,
-#header .top-nav ul li a.active:after{width:100%; height:2px; bottom:-10px;
-background: var(--main-color);}
+#header .top-nav ul li.active a:after{width:100%; height:3px; background: var(--main-color); margin-top:10px;}
 
 #header .top-icon{width:20%; height:100%; display: flex; _align-items: center;}
 #header .top-icon ul{width:100%;display:flex; align-items: center; justify-content: center; }
 #header .top-icon ul li{width:30%; text-align: center;}
+#header .top-icon ul li a i{font-size:25px; transition:all 0.4s;}
+#header .top-icon ul li:hover a i,
+#header .top-icon ul li.active a i{color:var(--main-color); transform:scale(1.2);}
 
-#header .top-icon ul li a i{font-size:25px;}
+
+/******************
+Banner Section Style  
+*******************/
+#bannerSec{position:relative;width:100%; height:500px; top:0; left:0; right:0;bottom:0;background:url(../img/banner_img.png) no-repeat 50% 50% fixed;
+background-size: cover; overflow:hidden; background-attachment: fixed;}
+#bannerSec .banner-overlay{display:block;width:100%; height:100%; top:0; left:0;
+position:absolute;background:rgba(0, 0, 0, 0.28);z-index:2;}
+
+
+
+/******************
+Slogan Section Style  
+*******************/
+#sloganSec{position:relative;width:100%; height:200px; background:var(--main-color); }
+#sloganSec .center{display:flex;}
+#sloganSec .slogan-tit{width:100%; display:flex; flex-direction: column; justify-content: center; align-items: center;
+color:#fff; }
+#sloganSec .slogan-tit h1{font-family:'Raleway'; font-weight: 500; font-size:50px; margin-bottom:10px; letter-spacing: 6px;}
+#sloganSec .slogan-tit h2{font-family: 'Noto Sans KR';font-size:25px; color:rgba(255, 255, 255, 0.76); letter-spacing:7px}
