--- a/css/reset.css
+++ b/css/reset.css
@@ -1,7 +1,7 @@
 /* reset style */
 *{margin:0; padding:0; box-sizing:border-box;}
 
-body{font-size:14px; font-family: 'Noto Sans KR', sans-serif;}
+body{font-size:14px; font-family: 'Noto Sans KR', sans-serif; overflow-y: visible;}
 .clear:after{clear:both; display:block; content:''; box-sizing: border-box;}
 
 .wrap{width:100%;height:100vh; position:relative;}
@@ -15,4 +15,7 @@ button, input{outline:0; }
 
 /* common title style */
 
-/* common sectio style */
+/* common section style */
+.section{position: relative; width:100%;}
+.button{width:150px; height:50px; padding:10px; text-align: center; background:var(--main-color); color:#fff;
+font-size:18px;}
