--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,10 @@ transition: all 0.4s;}
 /******************
 Banner Section Style  
 *******************/
-#bannerSec{position:relative;width:100%; height:500px; top:0; left:0; right:0;bottom:0;background:url(../img/banner_img.png) no-repeat 50% 50% fixed;
-background-size: cover; overflow:hidden; background-attachment: fixed;}
+#bannerSec{position:relative;width:100%; height:500px; top:0; left:0; right:0;bottom:0;background:url(../img/banner_img.png) no-repeat 50% 50%;
+background-size: cover; overflow:hidden; }
 #bannerSec .banner-overlay{display:block;width:100%; height:100%; top:0; left:0;
 position:absolute;background:rgba(0, 0, 0, 0.28);z-index:2;}
-
 
 
 /******************
@@ -48,3 +47,21 @@ Slogan Section Style
 color:#fff; }
 #sloganSec .slogan-tit h1{font-family:'Raleway'; font-weight: 500; font-size:50px; margin-bottom:10px; letter-spacing: 6px;}
 #sloganSec .slogan-tit h2{font-family: 'Noto Sans KR';font-size:25px; color:rgba(255, 255, 255, 0.76); letter-spacing:7px}
+
+/******************
+category Section Style  
+*******************/
+#categorySec{height:auto;}
+#categorySec .category-grid{width:100%; height:100%;display:grid; grid-template-columns: repeat(3,minmax(33.33%,auto)); 
+grid-template-rows: repeat(1,minmax(100%,auto));}
+#categorySec .category-grid .category-item{overflow:hidden; position:relative;}
+#categorySec .category-grid .category-item img{width:100%; transition: all 0.4s;}
+#categorySec .category-grid .category-item:hover img{transform:scale(1.2);}
+
+#categorySec .category-grid .category-item .category-btn{position:absolute; z-index:3; bottom:10%; right:10%;}
+
+
+/******************
+review Section Style  
+*******************/
+#reviewSec{height:500px; background:var(--sub-color)}
