--- a/css/reset.css
+++ b/css/reset.css
@@ -1,7 +1,7 @@
 /* reset style */
 *{margin:0; padding:0; box-sizing:border-box;}
 
-body{font-size:14px; font-family: 'Noto Sans KR', sans-serif; overflow-y: visible;}
+body{font-size:14px; font-family: 'Noto Sans KR', sans-serif; _overflow-y: visible;}
 .clear:after{clear:both; display:block; content:''; box-sizing: border-box;}
 
 .wrap{width:100%;height:100vh; position:relative;}
@@ -10,12 +10,15 @@ body{font-size:14px; font-family: 'Noto Sans KR', sans-serif; overflow-y: visibl
 ol,ul{list-style: none;}
 a{text-decoration: none; color:#000;}
 img{display:block;}
-button, input{outline:0; }
+button, input, textarea, select{outline:0; border:0;border-radius: 0; background:#fff;}
 
 
 /* common title style */
+.title{width:100%; display:flex; justify-content: center; padding:20px 0;}
+.title h1{font-family:'Raleway'; font-weight: 700; font-size: 50px; text-transform: uppercase;}
 
 /* common section style */
 .section{position: relative; width:100%;}
 .button{width:150px; height:50px; padding:10px; text-align: center; background:var(--main-color); color:#fff;
-font-size:18px;}
+font-weight:500; font-size:18px; transition: all 0.4s;}
+.button:hover{background:#fff;color:var(--main-color);}
