--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ Banner Section Style
 #bannerSec{position:relative;width:100%; height:500px; top:0; left:0; right:0;bottom:0;background:url(../img/banner_img.png) no-repeat 50% 50%;
 background-size: cover; overflow:hidden; }
 #bannerSec .banner-overlay{display:block;width:100%; height:100%; top:0; left:0;
-position:absolute;background:rgba(0, 0, 0, 0.28);z-index:2;}
+position:absolute;background:rgba(0, 0, 0, 0.445);z-index:2;}
 
 
 /******************
@@ -64,4 +64,18 @@ grid-template-rows: repeat(1,minmax(100%,auto));}
 /******************
 review Section Style  
 *******************/
-#reviewSec{height:500px; background:var(--sub-color)}
+#reviewSec{height:1000px; background:var(--sub-color)}
+#reviewSec .review-tit{margin-bottom:20px;}
+#reviewSec .review-con{width:100%; height:500px; position:relative; }
+#reviewSec .review-con .review-slider{width:90%; height:100%; position:relative; overflow:hidden; margin:0 auto;}
+#reviewSec .review-con .review-slider .review-img{width:100%; height:100%; position:relative; display:flex; justify-content: space-between; padding:0 20px;}
+#reviewSec .review-con .review-slider .review-img img{height:100%; _position:absolute; top:0; margin:0 20px;}
+/* #reviewSec .review-con .review-slider .review-img img:nth-child(1){left:0;} */
+/* #reviewSec .review-con .review-slider .review-img img:nth-child(2){left:30%;} */
+/* #reviewSec .review-con .review-slider .review-img img:nth-child(3){left:60%;} */
+
+#reviewSec .review-con .review-arrow{width:100%; position:absolute; top:50%; transform:translateY(-50%);}
+#reviewSec .review-con .review-arrow button{width:50px; height:100%; position:absolute;}
+#reviewSec .review-con .review-arrow button i{font-size:30px;color:var(--main-color); }
+
+#reviewSec .review-con .review-arrow button.next{right:0;}
