--- a/css/style.css
+++ b/css/style.css
@@ -62,20 +62,32 @@ grid-template-rows: repeat(1,minmax(100%,auto));}
 
 
 /******************
-review Section Style  
+slide Section Style  
 *******************/
-#reviewSec{height:1000px; background:var(--sub-color)}
-#reviewSec .review-tit{margin-bottom:20px;}
-#reviewSec .review-con{width:100%; height:500px; position:relative; }
-#reviewSec .review-con .review-slider{width:90%; height:100%; position:relative; overflow:hidden; margin:0 auto;}
-#reviewSec .review-con .review-slider .review-img{width:100%; height:100%; position:relative; display:flex; justify-content: space-between; padding:0 20px;}
-#reviewSec .review-con .review-slider .review-img img{height:100%; _position:absolute; top:0; margin:0 20px;}
-/* #reviewSec .review-con .review-slider .review-img img:nth-child(1){left:0;} */
-/* #reviewSec .review-con .review-slider .review-img img:nth-child(2){left:30%;} */
-/* #reviewSec .review-con .review-slider .review-img img:nth-child(3){left:60%;} */
+#slideSec{height:1000px; background:var(--sub-color)}
+#slideSec .slide-tit{margin-bottom:20px;}
+#slideSec .slide-wrap{width:100%; height:500px; position:relative; }
+#slideSec .slide-wrap .slide-con{width:90%; height:100%; position:relative; overflow:hidden; margin:0 auto;}
+#slideSec .slide-wrap .slide-con .slide-box{width:100%;height:100%; position:relative; }
+#slideSec .slide-wrap .slide-con .slide-box .slide-item{float:left; width:33.33%; height:100%; background:var(--main-color); box-sizing: border-box;
+padding:10px; display:flex; justify-content: center;}
+#slideSec .slide-wrap .slide-con .slide-box .slide-item img{height:100%; top:0; _margin:0 20px;}
+/* #slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(1){margin-left:0;} */
+#slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(2){background:darkcyan;}
+#slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(3){background:darkgoldenrod;}
+#slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(4){background:darksalmon;}
+#slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(5){background:cornflowerblue}
+#slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(6){background:crimson;}
 
-#reviewSec .review-con .review-arrow{width:100%; position:absolute; top:50%; transform:translateY(-50%);}
-#reviewSec .review-con .review-arrow button{width:50px; height:100%; position:absolute;}
-#reviewSec .review-con .review-arrow button i{font-size:30px;color:var(--main-color); }
 
-#reviewSec .review-con .review-arrow button.next{right:0;}
+/* #slideSec .slide-wrap .slide-box .slide-img{width:100%; height:100%; position:relative; display:flex; justify-content: space-between; padding:0 20px;} */
+/* #slideSec .slide-wrap .slide-box .slide-img img{height:100%; _position:absolute; top:0; margin:0 20px;} */
+/* #slideSec .slide-con .slide-slider .slide-img img:nth-child(1){left:0;} */
+/* #slideSec .slide-con .slide-slider .slide-img img:nth-child(2){left:30%;} */
+/* #slideSec .slide-con .slide-slider .slide-img img:nth-child(3){left:60%;} */
+
+#slideSec .slide-wrap .slide-btn{width:100%; height:50px;position:absolute; top:50%; transform:translateY(-50%);}
+#slideSec .slide-wrap .slide-btn button{width:50px; height:100%; position:absolute;}
+#slideSec .slide-wrap .slide-btn button i{font-size:30px;color:var(--main-color); }
+
+#slideSec .slide-wrap .slide-btn button.next{right:0;}
