--- a/css/style.css
+++ b/css/style.css
@@ -70,14 +70,14 @@ slide Section Style
 #slideSec .slide-wrap .slide-con{width:90%; height:100%; position:relative; overflow:hidden; margin:0 auto;}
 #slideSec .slide-wrap .slide-con .slide-box{width:100%;height:100%; position:absolute; }
 #slideSec .slide-wrap .slide-con .slide-box .slide-item{float:left; width:33.33%; height:100%; background:var(--main-color); box-sizing: border-box;
-padding:10px; _display:flex; _justify-content: center; position:relative; display:table; }
+padding:10px; display:flex; justify-content: center; position:relative; }
 #slideSec .slide-wrap .slide-con .slide-box .slide-item img{height:100%; top:0; _margin:0 20px; }
 /* #slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(1){margin-left:0;} */
-#slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(2){background:darkcyan;}
+/* #slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(2){background:darkcyan;}
 #slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(3){background:darkgoldenrod;}
 #slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(4){background:darksalmon;}
 #slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(5){background:cornflowerblue}
-#slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(6){background:crimson;}
+#slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(6){background:crimson;} */
 
 
 /* #slideSec .slide-wrap .slide-box .slide-img{width:100%; height:100%; position:relative; display:flex; justify-content: space-between; padding:0 20px;} */
