210407_banner section 태그 추가

--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,9 @@
+@media screen and (max-width:1440px){
+    /* banner section */
+    #bannerSec .banner-grid .banner-tag:nth-child(5) h3{font-size:40px;}
+
+}
+
 @media screen and (max-width:750px){
 
 }
