--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,25 @@ Banner Section Style
 background-size: cover; overflow:hidden; }
 #bannerSec .banner-overlay{display:block;width:100%; height:100%; top:0; left:0;
 position:absolute;background:rgba(0, 0, 0, 0.445);z-index:2;}
+#bannerSec .banner-grid{position:absolute; width:100%; height:100%; max-width: 70%; left:50%; transform:translateX(-50%);
+display:grid; grid-template-columns: repeat(3,minmax(33.33%,auto));
+grid-template-rows: repeat(3, minmax(33.33%,auto)); margin:0 auto; z-index:10;}
+#bannerSec .banner-grid .banner-tag{display:flex; justify-content: center;align-items: center;}
+#bannerSec .banner-grid .banner-tag:nth-child(2){z-index:4; transform:scale(1.3); align-items: flex-end; justify-content: flex-start;}
+#bannerSec .banner-grid .banner-tag:nth-child(5){z-index:1; transform:scale(1.5);}
+#bannerSec .banner-grid .banner-tag:nth-child(6){z-index:2; transform:scale(1.2); align-items: flex-start;justify-content: flex-start;padding-left: 20%;}
+#bannerSec .banner-grid .banner-tag:nth-child(7){z-index:3; transform:scale(1.3); align-items: flex-start;justify-content: center;}
+#bannerSec .banner-grid .banner-tag:nth-child(8){z-index:1;}
+
+#bannerSec .banner-grid .banner-tag h3{color:#fff; font-size: 20px; transition: transform 0.5s;}
+#bannerSec .banner-grid .banner-tag h3:hover{transform:scale(1.05)};
+#bannerSec .banner-grid .banner-tag:nth-child(2) h3{font-size:35px; color:rgba(255, 255, 255, 0.781);}
+#bannerSec .banner-grid .banner-tag:nth-child(5) h3{font-size:50px; }
+#bannerSec .banner-grid .banner-tag:nth-child(6) h3{font-size:30px; color:rgba(255, 255, 255, 0.774);}
+#bannerSec .banner-grid .banner-tag:nth-child(7) h3{font-size:40px; color:rgba(255, 255, 255, 0.877);}
+
+
+#bannerSec .banner-grid .banner-tag:nth-child(8) a.banner-btn{width:200px;}
 
 
 /******************
@@ -64,8 +83,8 @@ grid-template-rows: repeat(1,minmax(100%,auto));}
 /******************
 slide Section Style  
 *******************/
-#slideSec{height:1000px; background:var(--sub-color)}
-#slideSec .slide-tit{margin-bottom:20px;}
+#slideSec{height:100vh; }
+#slideSec .slide-tit{margin:100px 0 30px 0; }
 #slideSec .slide-wrap{width:100%; height:500px; position:relative; }
 #slideSec .slide-wrap .slide-con{width:90%; height:100%; position:relative; overflow:hidden; margin:0 auto;}
 #slideSec .slide-wrap .slide-con .slide-box{width:100%;height:100%; position:absolute; }
