--- a/css/media.css
+++ b/css/media.css
@@ -1,9 +1,33 @@
 @media screen and (max-width:1440px){
-    /* banner section */
-    #bannerSec .banner-grid .banner-tag:nth-child(5) h3{font-size:40px;}
+    
 
 }
 
-@media screen and (max-width:750px){
+@media screen and (max-width:1290px){
+    
+
+}
+
+@media screen and (max-width:1024px){
+    /* banner section */
+    #bannerSec .banner-con .banner-tag h3{font-size:40px;}
+    #bannerSec .banner-con .banner-tag:nth-child(2) h3{font-size:35px;}
+    #bannerSec .banner-con .banner-tag:nth-child(3) h3{font-size:50px;}
+    
+}
+
+
+@media screen and (max-width:790px){
+    /* banner section */
+    #bannerSec .banner-con .banner-tag:nth-child(1){margin-left:-20%;}
+
+
+
+    /* slogan section */
+    #sloganSec{height:100px; _margin:20px 0;}
+    #sloganSec .slogan-tit h1{font-size:40px;}
+    #sloganSec .slogan-tit h2{display:none;}
+
+    
 
 }
