--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 /*************
 Header Style  
 **************/
-#header{_position:fixed; width:100%; height:100px; _background:var(--main-color); display:flex; }
+#header{position:fixed; width:100%; height:100px; background:#fff; display:flex; z-index:50; transition: all 0.4s;}
 #header .center{display:flex; justify-content: space-between; align-items: center;}
 #header .top-logo{position:relative; _width:20%;height:100%; display:block; overflow:hidden;
 text-align: center; }
@@ -29,6 +29,16 @@ transition: all 0.4s;}
 #header .top-icon ul li.active a i{color:var(--main-color); transform:scale(1.2);}
 
 
+/*******************
+sub navigation Style  
+********************/
+.sub-nav{width:100%; height:100px; position:absolute; top:10%; z-index:50; display:none;}
+.sub-nav .center{max-width:50%; }
+.sub-nav ul{height:100%;background: #B3CABE; display:flex; }
+.sub-nav ul li{width:33.33%;}
+
+
+
 /******************
 Banner Section Style  
 *******************/
@@ -38,7 +48,7 @@ background-size: cover; overflow:hidden; }
 position:absolute;background:rgba(0, 0, 0, 0.445);z-index:2;}
 #bannerSec .banner-con{position:absolute; width:100%; height:100%; max-width: 70%; left:50%; transform:translateX(-50%); margin:0 auto; z-index:10;
 display: flex; flex-direction: column; justify-content: center; align-items: center;}
-#bannerSec .banner-con .banner-tag{width:auto; display:flex; justify-content: center; align-items: center; color:#fff;}
+#bannerSec .banner-con .banner-tag{width:auto; display:flex; justify-content: center; align-items: center; color:#fff; transition:all 0.4s;}
 #bannerSec .banner-con .banner-tag:nth-child(1){position:absolute; top:30%; transform:translateY(-40%);margin-left:-40%;}
 #bannerSec .banner-con .banner-tag:nth-child(2){position:absolute; top:65%; transform:translateY(-65%);right:20%;}
 #bannerSec .banner-con .banner-tag:nth-child(3){top:50%;;}
