--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,12 @@ transition: all 0.4s;}
 /*******************
 sub navigation Style  
 ********************/
-.sub-nav{width:100%; height:100px; position:absolute; top:10%; z-index:50; display:none;}
+.sub-nav{width:100%; height:100px; position:absolute; top:100px; z-index:49; background:none; }
 .sub-nav .center{max-width:50%; }
-.sub-nav ul{height:100%;background: #B3CABE; display:flex; }
-.sub-nav ul li{width:33.33%;}
+.sub-nav ul{width:400px;height:100%;background: #B3CABE; display:flex; }
+.sub-nav ul li{width:33.33%; display:flex; flex-direction: column; justify-content: center;
+align-items: center;}
+.sub-nav ul li a{font-weight: 500; font-size: 16px;}
 
 
 
@@ -60,7 +62,6 @@ display: flex; flex-direction: column; justify-content: center; align-items: cen
 #bannerSec .banner-con .banner-tag:nth-child(3) h3{font-size:60px;}
 #bannerSec .banner-con .banner-tag:nth-child(4) h3{font-size:35px; color:rgba(255, 255, 255, 0.842);}
 #bannerSec .banner-con .banner-tag h3:hover{transform: scale(1.1);}
-
 
 #bannerSec .banner-btn{position:absolute; z-index:10; width:100%; height:auto; bottom:20px; display: flex; justify-content: center; align-items: center; }
 #bannerSec .banner-btn a{width:200px; }
