--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,11 @@ Header Style
 **************/
 #header{position:fixed; width:100%; height:100px; background:#fff; display:flex; z-index:50; transition: all 0.4s;}
 #header .center{display:flex; justify-content: space-between; align-items: center;}
-#header .top-logo{position:relative; _width:20%;height:100%; display:block; overflow:hidden;
-text-align: center; }
+#header .top-bar{display:none; }
+#header .top-bar span{display:block;width:30px; height:3px; background:#004d26; border-radius: 10px;
+margin-bottom:10px;}
+#header .top-bar span:nth-child(3){margin-bottom:0;}
+#header .top-logo{position:relative; height:100%; overflow:hidden; display:flex; justify-content: center;}
 #header .top-logo img{height:100%;}
 
 #header .top-nav{width:60%; height:100%;display: flex; _align-items: center;}
