--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,12 @@ Header Style
     width: 0%;
     transition: all 0.4s;
 }
+.active a,
 #header .top-nav ul li:hover a,
 #header .top-nav ul li.active a {
     color: var(--main-color);
 }
+.active a:after,
 #header .top-nav ul li:hover a:after,
 #header .top-nav ul li.active a:after {
     width: 100%;
@@ -330,19 +332,23 @@ slide Section Style
     height: 500px;
     position: relative;
 }
-#slideSec .slide-wrap .slide-con {
+#slideSec .slide-wrap .slide-box {
     width: 90%;
     height: 100%;
     position: relative;
     overflow: hidden;
     margin: 0 auto;
 }
-#slideSec .slide-wrap .slide-con .slide-box {
+#slideSec .slide-wrap .slide-box .slide-contents {
     width: 100%;
     height: 100%;
     position: absolute;
 }
-#slideSec .slide-wrap .slide-con .slide-box .slide-item {
+#slideSec .slide-wrap .slide-box .slide-contents.animate {
+    transition: left 0.5s;
+}
+
+#slideSec .slide-wrap .slide-box .slide-contents .slide-item {
     float: left;
     width: 33.33%;
     height: 100%;
@@ -353,23 +359,38 @@ slide Section Style
     justify-content: center;
     position: relative;
 }
-#slideSec .slide-wrap .slide-con .slide-box .slide-item img {
+#slideSec .slide-wrap .slide-box .slide-contents .slide-item img {
     height: 100%;
     top: 0;
     _margin: 0 20px;
 }
-/* #slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(1){margin-left:0;} */
-/* #slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(2){background:darkcyan;}
-#slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(3){background:darkgoldenrod;}
-#slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(4){background:darksalmon;}
-#slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(5){background:cornflowerblue}
-#slideSec .slide-wrap .slide-con .slide-box .slide-item:nth-child(6){background:crimson;} */
+#slideSec .slide-wrap .slide-box .slide-contents .slide-item:nth-child(1) {
+    margin-left: 0;
+}
+#slideSec .slide-wrap .slide-box .slide-contents .slide-item:nth-child(2) {
+    background: darkcyan;
+}
+#slideSec .slide-wrap .slide-box .slide-contents .slide-item:nth-child(3) {
+    background: darkgoldenrod;
+}
+#slideSec .slide-wrap .slide-box .slide-contents .slide-item:nth-child(4),
+#slideSec .slide-wrap .slide-box .slide-contents .slide-item:nth-child(7) {
+    background: darksalmon;
+}
+#slideSec .slide-wrap .slide-box .slide-contents .slide-item:nth-child(5),
+#slideSec .slide-wrap .slide-box .slide-contents .slide-item:nth-child(8) {
+    background: cornflowerblue;
+}
+#slideSec .slide-wrap .slide-box .slide-contents .slide-item:nth-child(6),
+#slideSec .slide-wrap .slide-box .slide-contents .slide-item:nth-child(9) {
+    background: crimson;
+}
 
 /* #slideSec .slide-wrap .slide-box .slide-img{width:100%; height:100%; position:relative; display:flex; justify-content: space-between; padding:0 20px;} */
 /* #slideSec .slide-wrap .slide-box .slide-img img{height:100%; _position:absolute; top:0; margin:0 20px;} */
-/* #slideSec .slide-con .slide-slider .slide-img img:nth-child(1){left:0;} */
-/* #slideSec .slide-con .slide-slider .slide-img img:nth-child(2){left:30%;} */
-/* #slideSec .slide-con .slide-slider .slide-img img:nth-child(3){left:60%;} */
+/* #slideSec .slide-box .slide-slider .slide-img img:nth-child(1){left:0;} */
+/* #slideSec .slide-box .slide-slider .slide-img img:nth-child(2){left:30%;} */
+/* #slideSec .slide-box .slide-slider .slide-img img:nth-child(3){left:60%;} */
 
 #slideSec .slide-wrap .slide-btn {
     width: 100%;
